--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  
+
 jobs:
   job_id:
     runs-on: 'ubuntu-latest'
@@ -27,6 +27,8 @@ jobs:
       with:
         name: 'stock-homework'
         runtime: 'python39'
+        entry_point: 'main'
+        region: 'asia-east1'
 
     # Example of using the output
     - id: 'test'
